# kclip

./: .gitignore  .gitmodules  CMakeLists.txt  kbase.cc  kbase.hh  kclip.cc  kclip.hh  kclip_base.hh  kclip_os_macos.mm  kclip_os_windows.cc  kwidgets.cc
kclip-windows/: imgui_directwrite.cc  imgui_directwrite.hh  kclip.sln  kclip.vcxproj  kclip.vcxproj.filters  main.cc
